# DSPrepare

./: README.md  TEST.py  requirements.txt
DockerKurs/: Dockerfile  readme.md  script.sh  test_loop_script.py
FastAPITry/: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  readme.md
FastAPITry/alembic/versions/: 2025_05_18_1324-c36cf34ef973_create_products_table.py  (+3 more)
FastAPITry/api_v1/: __init__.py
FastAPITry/core/: __init__.py  config.py
FastAPITry/microshop/: pyproject.toml
FastAPITry/users/: crud.py  schemas.py  views.py
Kaggle/: XGBoost.ipynb  decision_tree.ipynb  melb_data_show.ipynb  optimization.ipynb  pipelines.ipynb
Kaggle/Competitions/: pentals_to_the_metal.ipynb
LangChainTry/: check_api_connection.ipynb  test.ipynb  test.py
LangChainTry/FlowerFinder/: .gitignore  Dockerfile  README.md  TD.md  config.py  docker-compose.yml  flowers.db  main.py  pyproject.toml  readme.md  requirements.txt
LangChainTry/FlowerFinder/LLM/: llm_florist.py
LangChainTry/FlowerFinder/bot/: handlers.py  keyboards.py
LangChainTry/FlowerFinder/database/: crud.py  schemas.py  session.py
LangChainTry/FlowerFinder/tests/: test_bot_flow.py
LeetCode/: arrays.py  hash.py  ints.py  matrix.py  strings.py  test.py
Statistic/: test.py  test_statistic_functions.py
Statistic/Files/: readme.md  Температура, осадки по регионам.csv
TGIntegrations/: config.py
TryDSLib/: trigonometric_functions.ipynb
TryTensorFlow/: docker-compose.yml  math.py  trigonometric_functions.ipynb
ksitest/data/: README.md  cow_bull_assignments.csv  ksitest.ipynb  test.ipynb
(+15 files in other folders)
