[project]
name = "flower-finder-bot"
version = "0.1.0"
description = "Поиск цветов по описанию в llm"
authors = [
    {name = "se.panchenko",email = "say.sokolowa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pip (>=25.1.1)",
    "aiogram (==2.25.1)",
    "sqlalchemy (==2.0.23)",
    "pydantic-settings (>=2.0.0)",
    "python-dotenv (==1.0.0)",
    "langchain-openai (>=0.3.19)",
    "langchain (>=0.3.25)",
    "langchain-community (>=0.3.24)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false